--- a/noteit/requirements.txt
+++ b/noteit/requirements.txt
@@ -56,3 +56,6 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 uvicorn==0.34.2
+sqlalchemy==2.0.19
+pymysql==1.0.3
+cryptography==40.0.2
