--- a/.github/workflows/noteit_test.yml
+++ b/.github/workflows/noteit_test.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: ./noteit/app
+                working-directory: ./app
 
         strategy:
             matrix:
